# netmap

./: .dockerignore  .gitignore  Cargo.toml  Claude-Plan.md  Dockerfile  Makefile  README.md  build.rs  config.yaml  docker-compose.yml  install.sh
scripts/: install_deps.sh
src/: main.rs  model.rs  pipeline.rs
src/backends/: arp_scan.rs  ip_neigh.rs  mod.rs  nmap.rs  traceroute.rs
src/renderer/: mod.rs
tests/: cli_integration.rs
